# pull-agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  download_model.py  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
public/: index.html
public/assets/: index-8KOwnoKH.css  index-BXQeFbG7.js  index-CL1Ubmp5.js
pull_agent/: main.py
subagents/: business-development.md  ceo.md  cfo.md  content-marketing-manager.md  coo.md  cto.md  customer-success-manager.md  data-analyst.md  devops-engineer.md  frontend-engineer.md  growth-marketing-manager.md  hr-manager.md  legal-compliance.md  product-manager.md  product-marketing-manager.md  qa-engineer.md  security-engineer.md  senior-backend-engineer.md  seo-sem-specialist.md  ux-designer.md
tests/: test_md.py
