[project]
name = "pull_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "chromadb>=1.0.16",
    "fastapi[standard]>=0.116.1",
    "rust-just>=1.42.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.6.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
